[metadata]
name = minimock
version = attr: minimock.__version__
author = Ian Bicking
author_email = ianb@colorstudy.com
maintainer = Low Kian Seong
maintainer_email = kianseong@gmail.com
description = The simplest possible mock library
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/lowks/minimock
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3.6

keywords =
    mock
    testing 
    unittest

[options]
python_requires = >=3.6
zip_safe = True

py_modules =
    minimock

[options.extras_require]
test =
    pytest
    pytest-flake8
    pytest-cov

cov =
    coverage
    coverage_python_version

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    .codeclimate.yml
    .gitattributes
    .coveragerc
    .gitignore
    .pep8speaks.yml
    codecov.yml
    conda/**

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist

max-line-length = 100

[nosetests]
verbosity = 3
with-coverage = 1
with-doctest = 1
cover-package = minimock
cover-xml = 1
